--- a/src/components/postagens/tabPostagens/TabPostagem.css
+++ b/src/components/postagens/tabPostagens/TabPostagem.css
@@ -1,3 +1,9 @@
-.titulo{
+.titulo {
     font-weight: bold;
- }
+}
+
+.tabela {
+    color: #ffffff !important;
+    border-color: #ffffff !important;
+    background-color: #7d1919;
+}
