--- a/src/pages/cadastroUsuario/CadastroUsuario.css
+++ b/src/pages/cadastroUsuario/CadastroUsuario.css
@@ -6,14 +6,10 @@
     margin-right: 20px !important;
 }
 
-.botaoCadastroUsuario {
-    background-color: #7d1919 !important;
-}
-
 .imagemCadastroUsuario {
     width: 100vh;
     min-height: 100vh;
-    background-image: url(https://i.imgur.com/d5bMdDJ.jpg);
+    background-image: url(https://i.imgur.com/qxtp6AU.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
