--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -1,4 +1,5 @@
 .textosLogin {
+    color: #7d1919 !important;
     font-weight: bold !important;
 }
 
@@ -9,12 +10,12 @@
 .imagem {
     width: 100vh;
     min-height: 100vh;
-    background-image: url(https://i.imgur.com/d5bMdDJ.jpg);
+    background-image: url(https://i.imgur.com/WeQW3ru.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 }
 
 .text-decorator-none {
-    text-decoration: none;
+    text-decoration: none !important;
 }
