--- a/src/pages/cadastroUsuario/CadastroUsuario.css
+++ b/src/pages/cadastroUsuario/CadastroUsuario.css
@@ -3,6 +3,10 @@
     font-weight: bold !important;
 }
 
+.botaoCancelar {
+    margin-right: 20px !important;
+}
+
 .imagemCadastroUsuario {
     width: 100vh;
     min-height: 100vh;
