--- a/src/pages/cadastroUsuario/CadastroUsuario.css
+++ b/src/pages/cadastroUsuario/CadastroUsuario.css
@@ -5,6 +5,8 @@
 
 .botaoCancelar {
     margin-right: 20px !important;
+    color: #fff !important;
+    background-color: #7d1919 !important;
 }
 
 .imagemCadastroUsuario {
